@@ -95,6 +95,8 @@ struct fuse_lowlevel_ops {
                     fuse_ino_t newparent, const char *newname);
     void (*link)   (fuse_req_t req, fuse_ino_t ino, fuse_ino_t newparent,
                     const char *newname);
+    void (*create) (fuse_req_t req, fuse_ino_t parent, const char *name,
+                    mode_t mode, struct fuse_file_info *fi);
     void (*open)   (fuse_req_t req, fuse_ino_t ino, struct fuse_file_info *fi);
     void (*read)   (fuse_req_t req, fuse_ino_t ino, size_t size, off_t off,
                     struct fuse_file_info *fi);
@@ -132,8 +134,12 @@ int fuse_reply_err(fuse_req_t req, int err);
 /* forget */
 int fuse_reply_none(fuse_req_t req);
 
-/* lookup, mknod, mkdir, symlink, link */
+/* lookup, create, mknod, mkdir, symlink, link */
 int fuse_reply_entry(fuse_req_t req, const struct fuse_entry_param *e);
+
+/* create */
+int fuse_reply_create(fuse_req_t req, const struct fuse_entry_param *e,
+                      const struct fuse_file_info *fi);
 
 /* getattr, setattr */
 int fuse_reply_attr(fuse_req_t req, const struct stat *attr,
